--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "bun run vite preview"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.1",
     "@types/bun": "latest",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -17,9 +19,9 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
-    "vitest": "^2.1.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.4.5"
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0",
+    "vitest": "^2.1.3"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -29,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "tiktoken": "^1.0.22",
     "zod": "^4.1.12"
   }
 }
