--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10",
     "eslint": "^9.13.0",
+    "postcss": "^8",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
     "vite-plugin-top-level-await": "^1.6.0",
@@ -27,10 +30,17 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.59.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.546.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "tailwind-merge": "^3.3.1",
     "tiktoken": "^1.0.22",
     "zod": "^4.1.12"
   }
