--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "tiktoken": "^1.0.22",
     "zod": "^4.1.12"
