--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "tiktoken": "^1.0.22",
     "zod": "^4.1.12"
