--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Claude Code local settings
+.claude/settings.local.json
+
+# Sample logs (local development files)
+sample-logs/
